--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -6,6 +6,4 @@ $info: white;
 $warning: lightgrey;
 $success: black;
 
-// Used for the dashboard:
-// reduced horizontal and vertical padding
-$section-padding-medium: 0rem 0.75rem;
+$navbar-breakpoint: 0px;
