--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -7,3 +7,5 @@ $warning: lightgrey;
 $success: black;
 
 $navbar-breakpoint: 0px;
+$section-padding: 3rem 0rem;
+$section-padding-desktop: 3rem 0rem;
