add loading on auth pages

--- a/assets/scss/mdi.scss
+++ b/assets/scss/mdi.scss
@@ -22,6 +22,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.mdi-loading::before {
+  content: "\F0772";
+}
+
 .mdi-home-outline::before {
   content: "\F06A1";
 }
