add loading spinner to gallery modal

--- a/assets/scss/classes.scss
+++ b/assets/scss/classes.scss
@@ -14,19 +14,19 @@
 .ltr-fit {
   max-width: 100%;
   max-height: 85vh;
+  min-height: 80vh;
 }
 
-// Overlays
+// Overlays at position
 .ltr-is-center-center {
   align-items: center;
   justify-content: center;
   display: flex;
 }
-.ltr-is-top-left {
-  background: none;
-  position: fixed;
-  left: 20px;
-  top: 20px;
+.ltr-is-top-right {
+  align-items: flex-start;
+  justify-content: right;
+  display: flex;
 }
 .ltr-is-center-left {
   background: none;
@@ -43,35 +43,40 @@
   transform: translateY(-50%);
 }
 .ltr-is-bottom-left {
-  background: none;
-  position: fixed;
-  bottom: 20px;
-  left: 20px;
+  align-items: flex-end;
+  display: flex;
 }
 .ltr-is-bottom-right {
-  background: none;
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
+  align-items: flex-end;
+  justify-content: right;
+  display: flex;
 }
-.ltr-is-bottom-center {
-  background: none;
-  position: fixed;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
+
+// Overlays at smaller size for mobile
+.ltr-is-smaller-top-right {
+  transform: scale(0.7);
+  transform-origin: 100% 0%;
+}
+.ltr-is-smaller-bottom-left {
+  transform: scale(0.7);
+  transform-origin: 0% 100%;
+}
+.ltr-is-smaller-bottom-right {
+  transform: scale(0.7);
+  transform-origin: 100% 100%;
+}
+
+// Image preview focus on over
+.card-image:hover img {
+  transform: scale(1.15);
+}
+.image {
+  overflow: hidden;
 }
 
 // make the text white inside the oruga notification
 div.media-content {
 	color: white;
-}
-
-// Class for the paid invoice icon with primary color
-.ltr-is-192by192-primary svg {
-  min-height: 192px;
-  min-width: 192px;
-  color: $primary;
 }
 
 .ltr-sticky {
