--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -9,3 +9,6 @@ $success: black;
 $navbar-breakpoint: 0px;
 $section-padding: 3rem 0rem;
 $section-padding-desktop: 3rem 0rem;
+
+
+$modal-content-background-color: transparent;
