change preview background to black

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -3,12 +3,12 @@ $primary: $custom;
 $link: $custom;
 $danger: $custom;
 $info: white;
-$warning: lightgrey;
+$warning: grey;
 $success: black;
 
 $navbar-breakpoint: 0px;
 $section-padding: 3rem 0rem;
 $section-padding-desktop: 3rem 0rem;
 
-
+// Oruga
 $modal-content-background-color: transparent;
