add header and seo to escort page and fix titles size

--- a/assets/scss/mdi.scss
+++ b/assets/scss/mdi.scss
@@ -150,6 +150,10 @@
   font-size: 48px;
 }
 
+.mdi-72px.mdi-set, .mdi-72px.mdi:before {
+  font-size: 72px;
+}
+
 .mdi-dark:before {
   color: rgba(0, 0, 0, 0.54);
 }
