add escort navigator

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -6,6 +6,7 @@ $info: white;
 $warning: grey;
 $success: black;
 
+$dimensions: 48 288;
 $navbar-breakpoint: 0px;
 $section-padding: 3rem 0rem;
 $section-padding-desktop: 3rem 0rem;
