reorg escort properties under groups

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -3,7 +3,7 @@ $primary: $custom;
 $link: $custom;
 $danger: $custom;
 $info: white;
-$warning: grey;
+$warning: lightgrey;
 $success: black;
 
 $dimensions: 48 288;
