add modal image blur and watermark, still much to fix

--- a/assets/scss/classes.scss
+++ b/assets/scss/classes.scss
@@ -146,3 +146,12 @@ div.media-content {
 .is-7 {
   font-size: 0.75rem;
 }
+
+// White color for the loading icon
+.ltr-is-white {
+  color: white;
+}
+
+.ltr-is-transparent {
+  background: transparent;
+}
