--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -13,3 +13,5 @@ $section-padding-desktop: 3rem 0rem;
 
 // Oruga
 $modal-content-background-color: transparent;
+// $loading-overlay-legacy: #00000000;
+// $loading-overlay:	rgba(255,255,255,0.0);
