add dashboard publication age page

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,7 +1,7 @@
 $custom:  black; // rgb(164, 53, 50); // a43532
 $primary: $custom;
 $link: $custom;
-$danger: $custom;
+$danger: red;
 $info: white;
 $warning: lightgrey;
 $success: black;
