override default sitemap alternative for static routes

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,4 +3,4 @@
 @import 'bulma/sass/utilities/_all';
 @import 'bulma/bulma.sass';
 @import '@oruga-ui/theme-bulma/dist/scss/bulma';
-@import 'assets/scss/classes'
+@import 'assets/scss/classes';
