fix escort images preview

--- a/assets/scss/classes.scss
+++ b/assets/scss/classes.scss
@@ -15,14 +15,14 @@
   max-height: 80vh !important;
   width: 95% !important;
   object-fit: contain !important;
-  margin: auto;
+  margin: auto !important;
 }
 
 .ltr-fit-tablet {
   height: 82vh !important;
   max-width: 95% !important;
   object-fit: contain !important;
-  margin: auto;
+  margin: auto !important;
 }
 
 // Overlays at flex position
