fix wa header icon

--- a/assets/scss/mdi.scss
+++ b/assets/scss/mdi.scss
@@ -150,6 +150,10 @@
   font-size: 48px;
 }
 
+.mdi-60px.mdi-set, .mdi-60px.mdi:before {
+  font-size: 60px;
+}
+
 .mdi-72px.mdi-set, .mdi-72px.mdi:before {
   font-size: 72px;
 }
