--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,7 +1,6 @@
 @import 'assets/scss/custom';
 @import '@oruga-ui/oruga-next/src/scss/oruga-full-vars';
-@import "bulma/sass/utilities/_all";
-@import "bulma/bulma.sass";
+@import 'bulma/sass/utilities/_all';
+@import 'bulma/bulma.sass';
 @import '@oruga-ui/theme-bulma/dist/scss/bulma';
-// @import 'bulma-prefers-dark/bulma-prefers-dark';
-@import 'assets/scss/classes';
+@import 'assets/scss/classes'
