adjust modal close icon

--- a/assets/scss/classes.scss
+++ b/assets/scss/classes.scss
@@ -152,6 +152,7 @@ div.media-content {
   color: white;
 }
 
+// Transparent backgorund for the loading icon
 .ltr-is-transparent {
   background: transparent;
 }
