--- a/assets/scss/mdi.scss
+++ b/assets/scss/mdi.scss
@@ -1,11 +1,11 @@
 /* MaterialDesignIcons.com */
 @font-face {
   font-family: "Material Design Icons";
-  src: url("~/node_modules/@mdi/font/fonts/materialdesignicons-webfont.eot?v=7.1.96");
-  src: url("~/node_modules/@mdi/font/fonts/materialdesignicons-webfont.eot?#iefix&v=7.1.96") format("embedded-opentype"),
-       url("~/node_modules/@mdi/font/fonts/materialdesignicons-webfont.woff2?v=7.1.96") format("woff2"),
-       url("~/node_modules/@mdi/font/fonts/materialdesignicons-webfont.woff?v=7.1.96") format("woff"),
-       url("~/node_modules/@mdi/font/fonts/materialdesignicons-webfont.ttf?v=7.1.96") format("truetype");
+  src: url("~/node_modules/@mdi/font/fonts/materialdesignicons-webfont.eot");
+  src: url("~/node_modules/@mdi/font/fonts/materialdesignicons-webfont.eot?#iefix") format("embedded-opentype"),
+       url("~/node_modules/@mdi/font/fonts/materialdesignicons-webfont.woff2") format("woff2"),
+       url("~/node_modules/@mdi/font/fonts/materialdesignicons-webfont.woff") format("woff"),
+       url("~/node_modules/@mdi/font/fonts/materialdesignicons-webfont.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: block;
